# ChangeLog for media-gfx/xv
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xv/ChangeLog,v 1.12 2003/03/25 05:20:11 agriffis Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*xv-3.10a-r3 (03 Nov 2002)

  25 Mar 2003; Aron Griffis <agriffis@gentoo.org> xv-3.10a-r3.ebuild:
  Add ~alpha to KEYWORDS

  03 Nov 2002; Ryan Phillips <rphillips@gentoo.org> xv-3.10a-r3.ebuild :

  Added Bret Towes sed statements to produce an optimized build. Fixes #6756

*xv-3.10a-r2 (05 Jun 2002)

  13 Oct 2002; Olivier Reisch <doctomoe@gentoo.org> xv-3.10a-r2.ebuild:
  Fixed the ebuild to apply patches correctly if we both have use ppc and use png

  02 Sep 2002; Jack Morgan <jmorgan@gentoo.org> xv-3.10a-r2.ebuild
  Added sparc/sparc64 keywords :

  05 Jun 2002; Olivier Reisch <doctomoe@gentoo.org> xv-3.10a-r2.ebuild
  files/digest-xv-3.10a-r2 :

  Added a patch to the current ebuild that makes the sources build and link
  fine on PPC. The patch is only applied on PPC, so there should be no
  changes in code on other platforms. Fixes BUG #3370.

*xv-3.10a-r2 (29 Apr 2002)

  29 Apr 2002; Seemant Kulleen <seemant@gentoo.org> xv-3.10a-r2.ebuild
  files/digest-xv-3.10a-r2 :

  NAZ (from #gentoo) enhanced the patch so that app-shells/tcsh does not have
  to be a compile-time dependency.

*xv-3.10a-r1 (29 Apr 2002)

  29 Apr 2002; Seemant Kulleen <seemant@gentoo.org> xv-3.10a-r1.ebuild
  files/digest-xv-3.10a-r1 files/xv-naz-gentoo.patch :

  This patch, submitted by NAZ (from #gentoo) now brings in png, jpeg and tiff
  support.  The only issue is that, if you want support for one of those, you
  get to have support for all of them.  While unfortunate, this unavoidable, due
  to the manner in which xv's Makefiles are laid out.  To think, there actually
  is a configure script.  And also, it's been more than half a decade since